--- a/css/home.css
+++ b/css/home.css
@@ -165,7 +165,7 @@ header {
 }
 
 #btn-theme {
-    --btn-theme-height: 34px;
+    --btn-theme-height: 2rem;
     border: 0;
     padding: 0;
     background: transparent;
@@ -183,19 +183,19 @@ header {
 }
 
 #icon-light-mode {
-    transform: translateY(-3px);
-    margin-right: 4px
+    margin-right: 0.25rem;
 }
 
-#icon-dark-mode {
-    transform: translateY(-2px);
+.svg-icon-light {
+    height: 2.25rem;
+    transform: translateY(-0.125rem);
 }
 
 #slider-theme {
     position: relative;
     display: inline-block;
     height: 100%;
-    width: calc(var(--btn-theme-height) + 26px);
+    width: calc(var(--btn-theme-height) * 2 - 0.5rem);
     border-radius: var(--btn-theme-height);
     background-color: var(--background-color-toggle);
     -webkit-transition: 0.4s;
@@ -206,10 +206,10 @@ header {
 #slider-theme::before {
     position: absolute;
     content: "";
-    height: calc(var(--btn-theme-height) - 8px);
-    width: calc(var(--btn-theme-height) - 8px);
-    left: 4px;
-    bottom: 4px;
+    height: calc(var(--btn-theme-height) - 0.5rem);
+    width: calc(var(--btn-theme-height) - 0.5rem);
+    left: 0.25rem;
+    bottom: 0.25rem;
     border-radius: 50%;
     background-color: white;
     -webkit-transition: 0.4s;
@@ -222,9 +222,9 @@ header {
 }
 
 #btn-theme[aria-pressed="true"] #slider-theme::before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(calc(var(--btn-theme-height) - 0.5rem));
+    -ms-transform: translateX(calc(var(--btn-theme-height) - 0.5rem));
+    transform: translateX(calc(var(--btn-theme-height) - 0.5rem));
 }
 
 #section-home {
@@ -304,25 +304,6 @@ header {
 }
 
 @media (max-width: 576px) {
-
-    #btn-theme {
-        --btn-theme-height: 28px;
-    }
-
-    #icon-light-mode {
-        transform: translateY(-2px);
-        margin-right: 2px;
-    }
-
-    #icon-dark-mode {
-        transform: translateY(-1px);
-    }
-
-    #moon-icon,
-    #sun-icon {
-        height: 30px;
-    }
-
     #scroll-button {
         display: block;
         position: initial;
